先存个档 基础信息重新审批环节

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,7 +53,7 @@ server.port=8080
 #server.address= # bind to a specific NIC
 #server.session-timeout= # session timeout in seconds
 #the context path, defaults to '/'
-#server.context-path=/rpp
+#server.context-path=/pcms
 #server.servlet-path= # the servlet path, defaults to '/'
 #server.tomcat.access-log-pattern= # log pattern of the access log
 #server.tomcat.access-log-enabled=false # is access logging enabled
