--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,7 +67,7 @@ server.port=8080
 ########################################################
 ###THYMELEAF (ThymeleafAutoConfiguration)
 ########################################################
-#spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
 #spring.thymeleaf.mode=HTML5
 #spring.thymeleaf.encoding=UTF-8
