--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+        <!-- redis客户端:Jedis -->
+      <!--  <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>-->
 	</dependencies>
 
 	<build>
