--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 ########################################################
 spring.datasource.filters=stat,wall,log4j
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-
 spring.datasource.useGlobalDataSourceStat=true
+spring.datasource.logSlowSql=true
 ########################################################
 ### Java Persistence Api -- spring data jpa config info
 ########################################################
