--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 ########################################################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://192.168.100.176:3306/pcms?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.url = jdbc:mysql://192.168.100.239:3306/pcms?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = Y223183q!
 ########################################################
@@ -93,3 +93,6 @@ spring.thymeleaf.mode=LEGACYHTML5
 #spring.freemarker.suffix=.ftl
 #spring.freemarker.template-loader-path=classpath:/templates/ #comma-separated list
 #spring.freemarker.view-names= # whitelist of view names that can be resolved
+
+shiro.cas=http://dockertest.butterfly.mopaasapp.com
+shiro.server=http://127.0.0.1:8080
